# html-hoster

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  railway.toml  tsconfig.json
.github/workflows/: release-companion.yml
apps/api/: .env.example
apps/api/public/: index.html
apps/api/public/i18n/: en.json
apps/api/src/middleware/: demo.ts
apps/api/src/routes/: docs.ts  serve.ts
apps/api/src/storage/: demo.ts  local.ts  s3.ts
apps/api/src/utils/: path.ts
apps/companion/: .gitignore  index.html  package.json
apps/companion/src/: index.css  main.tsx
apps/companion/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion/src-tauri/capabilities/: default.json
apps/companion/src-tauri/icons/: icon.icns
apps/companion/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/companion/src-tauri/src/commands/: mod.rs  secure_storage.rs  shortcut.rs  window.rs
apps/companion/src/app/: App.tsx  providers.tsx
apps/companion/src/features/onboarding/: OnboardingFlow.tsx
apps/companion/src/features/pages/: PagesView.tsx  pages.schema.ts  pages.service.ts
apps/companion/src/features/settings/: SettingsView.tsx  settings.schema.ts  settings.service.ts
apps/companion/src/features/upload/: UploadView.tsx  upload.schema.ts  upload.service.ts  useServerConfig.ts
apps/companion/src/locales/: en.json  pt-BR.json
apps/companion/src/shared/api/: client.ts  errors.ts
public/: index.html
public/i18n/: pt.json
src/: config.ts  index.ts
src/middleware/: auth.ts
src/routes/: api.ts  mcp_route.ts
src/storage/: index.ts  types.ts
(+17 files in other folders)
