[package]
name = "companion"
version = "0.1.0"
description = "html-hoster desktop companion"
authors = []
edition = "2021"

[lib]
name = "companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-global-shortcut = "2"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
